--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>你好，我是林木，在读统计学研究生。</p>
+    <p>你好，我是林木，统计学在读研究生。</p>
 
     <p>使用这个博客是为了记录自己在机器学习，算法，数据分析中的所学。</p>
 
