--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Shian."
+description: "Hey, this is ShianLin."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,8 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>我们的痛苦大多来自想象，而非现实<br></p></blockquote>
 
     <p>你好，我是林木，统计学在读研究生。</p>
 
