--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://github.com/qiubaiying/qiubaiying.github.io">柏荧</a></li>
+        <li><a href="https://github.com/qiubaiying/qiubaiying.github.io/wiki/%E5%8D%9A%E5%AE%A2%E6%90%AD%E5%BB%BA%E8%AF%A6%E7%BB%86%E6%95%99%E7%A8%8B">柏荧</a></li>
     </ul>
 </div>
 
